--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -2,6 +2,7 @@
   "name": "new",
   "version": "0.1.0",
   "private": true,
+  
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
@@ -19,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "Backend": "cd .. && cd Backend && npm start",
+    "dev": "concurrently \" npm start\" \"npm run Backend\""
   },
   "eslintConfig": {
     "extends": [
